Iterating by KeySet is inefficient. Also use valueOf in preference to new. (minor)